@@ -1,7 +1,9 @@
 package com.crazymaker.springcloud.common.encrypt;
 
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
+//import sun.misc.BASE64Decoder;
+//import sun.misc.BASE64Encoder;
+
+import com.fasterxml.jackson.databind.ser.Serializers;
 
 import javax.crypto.Cipher;
 import javax.crypto.KeyGenerator;
@@ -9,6 +11,9 @@ import javax.crypto.SecretKey;
 import javax.crypto.SecretKeyFactory;
 import javax.crypto.spec.DESKeySpec;
 import java.security.Key;
+import java.util.Arrays;
+import java.util.Base64;
+import java.util.Base64.*;
 // Source code recreated from a .class file by IntelliJ IDEA
 // (powered by Fernflower decompiler)
 //
@@ -25,11 +30,11 @@ public class DESCoder
 
     public static void generate(String data)
     {
-        BASE64Encoder encoder = new BASE64Encoder();
+        Base64.Encoder encoder = Base64.getEncoder();
 
         try
         {
-            String key = encoder.encode(initKey());
+            String key = new String(encoder.encode(initKey()), "UTF-8");
             String result = encrypt(data, key);
             System.out.println("the key is :" + key);
             System.out.println("this datas is :" + result);
@@ -50,21 +55,21 @@ public class DESCoder
 
     public static String encrypt(String data, String key) throws Exception
     {
-        BASE64Encoder encoder = new BASE64Encoder();
-        BASE64Decoder decoder = new BASE64Decoder();
-        Key k = toKey(decoder.decodeBuffer(key));
+        Encoder encoder = Base64.getEncoder();
+        Decoder decoder = Base64.getDecoder();
+        Key k = toKey(decoder.decode(key));
         Cipher cipher = Cipher.getInstance("DES/ECB/PKCS5Padding" );
         cipher.init(1, k);
-        return encoder.encode(cipher.doFinal(data.getBytes()));
+        return new String(encoder.encode(cipher.doFinal(data.getBytes())), "UTF-8");
     }
 
     public static String decrypt(String data, String key) throws Exception
     {
-        BASE64Decoder decoder = new BASE64Decoder();
-        Key k = toKey(decoder.decodeBuffer(key));
+        Decoder decoder = Base64.getDecoder();
+        Key k = toKey(decoder.decode(key));
         Cipher cipher = Cipher.getInstance("DES/ECB/PKCS5Padding" );
         cipher.init(2, k);
-        return new String(cipher.doFinal(decoder.decodeBuffer(data)), "UTF-8" );
+        return new String(cipher.doFinal(decoder.decode(data)), "UTF-8" );
     }
 
     private static Key toKey(byte[] key) throws Exception
