@@ -1,7 +1,5 @@
 package com.crazymaker.springcloud.common.util;
 
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
 
 import javax.crypto.Cipher;
 import java.security.KeyFactory;
@@ -10,6 +8,7 @@ import java.security.PublicKey;
 import java.security.interfaces.RSAPublicKey;
 import java.security.spec.PKCS8EncodedKeySpec;
 import java.security.spec.X509EncodedKeySpec;
+import java.util.Base64;
 
 /**
  * RSA加解密工具类
@@ -37,8 +36,8 @@ public class RsaUtils
             Cipher cipher = Cipher.getInstance(CIPHER_INSTANCE);
             cipher.init(Cipher.ENCRYPT_MODE, publicKey);
             byte[] output = cipher.doFinal(content.getBytes());
-            BASE64Encoder encoder = new BASE64Encoder();
-            return encoder.encode(output);
+            Base64.Encoder encoder = Base64.getEncoder();
+            return new String(encoder.encode(output), "UTF-8");
         } catch (Exception e)
         {
             e.printStackTrace();
@@ -99,8 +98,8 @@ public class RsaUtils
             Cipher cipher = Cipher.getInstance(CIPHER_INSTANCE);
             cipher.init(Cipher.DECRYPT_MODE, privateKey);
             byte[] b = cipher.doFinal(content.getBytes());
-            BASE64Encoder encoder = new BASE64Encoder();
-            return encoder.encode(b);
+            Base64.Encoder encoder = Base64.getEncoder();
+            return new String(encoder.encode(b), "UTF-8");
         } catch (Exception e)
         {
             e.printStackTrace();
@@ -116,7 +115,7 @@ public class RsaUtils
     public static RSAPublicKey getPublicKey(String key) throws Exception
     {
         byte[] keyBytes;
-        keyBytes = (new BASE64Decoder()).decodeBuffer(key);
+        keyBytes = (Base64.getDecoder()).decode(key);
         X509EncodedKeySpec keySpec = new X509EncodedKeySpec(keyBytes);
         KeyFactory keyFactory = KeyFactory.getInstance("RSA" );
         return (RSAPublicKey) keyFactory.generatePublic(keySpec);
@@ -130,7 +129,7 @@ public class RsaUtils
     public static PrivateKey getPrivateKey(String key) throws Exception
     {
         byte[] keyBytes;
-        keyBytes = (new BASE64Decoder()).decodeBuffer(key);
+        keyBytes = (Base64.getDecoder()).decode(key);
         PKCS8EncodedKeySpec keySpec = new PKCS8EncodedKeySpec(keyBytes);
         KeyFactory keyFactory = KeyFactory.getInstance("RSA" );
         return keyFactory.generatePrivate(keySpec);
